--- a/courses.html
+++ b/courses.html
@@ -9,8 +9,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="free-educational-responsive-web-template-webEdu">
-	<meta name="author" content="webThemez.com">
+	<meta name="description" content="Team Topup-U committed to create a better life">
+	<meta name="author" content="Topup-U">
 	<title>Courses-Topup-U Online learning platform</title>
 	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
