--- a/videos.html
+++ b/videos.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="Team Topup-U committed to create a better life">
 	<meta name="author" content="Topup-U">
 	<title>Videos-Topup-U Online learning platform</title>
+	 <link rel="shortcut icon" href="assets/images/WATERMARK.jpg" />
 	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
