--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div><!-- .fluid_container -->
 		</div>
 	</header>
+	  <header id="headSocial">    
+    <div class="social text-center ">  
+      <a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg?sub_confirmation=1"><img src="assets/images/Social/youtube.png"></a>
+      <a href="https://www.facebook.com/topup.u.1/"><img src="assets/images/Social/fb.png"></a>
+      <a href="https://www.instagram.com/topupucontact/"><img src="assets/images/Social/insta.png"></a>
+      <a href="https://www.linkedin.com/in/topup-u-online-learning-platform-375aba20a/"><img src="assets/images/Social/linkedin.png"></a>        
+    </div> 
+  </header>
 	<!-- /Header -->
 
   <div class="container">
@@ -96,7 +104,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div><!--icon box top -->
 							<h4>Online Courses</h4>
 							<p>View our new course informations and other programs. We are providing full fledged courses and crash courses for many exams and other specific subjects.</p>
-     						<p><a href="#"><em>Read More</em></a></p>
+     						<p><a href="courses.html"><em>Read More</em></a></p>
 						</div><!--grey box -->
 					</div><!--/span3-->
 					<div class="col-md-3">
@@ -107,7 +115,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<h4>Meet our Staff</h4>
 							<p>Our team consists of highly qualified, experienced and knowledgeable professionals that are passionate and dedicated to our students.
                   </p>
-     						<p><a href="#"><em>Read More</em></a></p>
+     						<p><a href="about.html"><em>Read More</em></a></p>
 						</div><!--grey box -->
 					</div><!--/span3-->
 					<div class="col-md-3">
@@ -117,7 +125,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div><!--icon box top -->
 							<h4>Latest Updates</h4>
 							<p>We here  provides latest updates about our Topup-U policies, education and job related news and deadline dates of different exams etc.</p>
-     						<p><a href="#"><em>Read More</em></a></p>
+     						<p><a href="videos.html"><em>Read More</em></a></p>
 						</div><!--grey box -->
 					</div><!--/span3-->
 					<div class="col-md-3">
@@ -127,7 +135,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div><!--icon box top -->
 							<h4>Latest Job Notifications </h4>
 							<p>All the Job Searchers can search here for job notifications. Candidates will get Job Notifications released  in Government and private sectors across India.</p>
-     						<p><a href="#"><em>Read More</em></a></p>
+     						<p><a href="about.html"><em>Read More</em></a></p>
 						</div><!--grey box -->
 					</div><!--/span3-->
 				</div>
@@ -323,7 +331,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <a href="https://www.facebook.com/topup.u.1/"><i class="fa fa-facebook"></i></a>
   <a href="https://www.instagram.com/topupucontact/"><i class="fa fa-instagram"></i></a>
   <a href="https://www.linkedin.com/in/topup-u-online-learning-platform-375aba20a/"><i class="fa fa-linkedin"></i></a>
-  <a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg/featured"><i class="fa fa-youtube-play"></i></a>        
+  <a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg?sub_confirmation=1"><i class="fa fa-youtube-play"></i></a>        
 </div>  
 
 			<div class="clear"></div>
