--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	</header>
 	  <header id="headSocial">    
     <div class="social text-center ">  
-      <a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg?sub_confirmation=1"><img src="assets/images/youtube.png"></a>
+      <a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg?sub_confirmation=1"><img src="assets/images/utube.png"></a>
       <a href="https://www.facebook.com/topup.u.1/"><img src="assets/images/fb.png"></a>
       <a href="https://www.instagram.com/topupucontact/"><img src="assets/images/insta.png"></a>
       <a href="https://www.linkedin.com/in/topup-u-online-learning-platform-375aba20a/"><img src="assets/images/linkedin.png"></a>        
