--- a/about.html
+++ b/about.html
@@ -67,7 +67,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <p class="textpmid">Topup-U committed to create a better life</p>
                 </div>
     </header>
-
+<header id="headSocial">    
+    <div class="social text-center "> 	
+      <a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg?sub_confirmation=1"><img src="assets/images/utube.png"></a>  
+	    <a href="https://www.facebook.com/topup.u.1/"><img src="assets/images/fb.png"></a>
+      <a href="https://www.instagram.com/topupucontact/"><img src="assets/images/insta.png"></a>
+      <a href="https://www.linkedin.com/in/topup-u-online-learning-platform-375aba20a/"><img src="assets/images/linkedin.png"></a>        
+    </div> 
+  </header>
 
     <!-- container -->
     <section class="container">
