--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <p class="textpmid">For any kind of assistance, please feel free to contact us!</p>
                 </div>
     </header>
-
+  <header id="headSocial">    
+    <div class="social text-center "> 	
+      <a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg?sub_confirmation=1"><img src="assets/images/utube.png"></a>  
+	    <a href="https://www.facebook.com/topup.u.1/"><img src="assets/images/fb.png"></a>
+      <a href="https://www.instagram.com/topupucontact/"><img src="assets/images/insta.png"></a>
+      <a href="https://www.linkedin.com/in/topup-u-online-learning-platform-375aba20a/"><img src="assets/images/linkedin.png"></a>        
+    </div> 
+  </header>
 
 	<!-- container -->
 	<div class="container">
@@ -242,7 +249,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<a href="https://www.facebook.com/topup.u.1/"><i class="fa fa-facebook"></i></a>
 					<a href="https://www.instagram.com/topupucontact/"><i class="fa fa-instagram"></i></a>
 					<a href="https://www.linkedin.com/in/topup-u-online-learning-platform-375aba20a/"><i class="fa fa-linkedin"></i></a>
-					<a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg/featured"><i class="fa fa-youtube-play"></i></a>        
+					<a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg?sub_confirmation=1"><i class="fa fa-youtube-play"></i></a>        
 				</div>     
 			</div>
 
