--- a/courses.html
+++ b/courses.html
@@ -68,7 +68,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
     </header>
 
-    
+      <header id="headSocial">    
+    <div class="social text-center "> 	
+      <a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg?sub_confirmation=1"><img src="assets/images/utube.png"></a>  
+	    <a href="https://www.facebook.com/topup.u.1/"><img src="assets/images/fb.png"></a>
+      <a href="https://www.instagram.com/topupucontact/"><img src="assets/images/insta.png"></a>
+      <a href="https://www.linkedin.com/in/topup-u-online-learning-platform-375aba20a/"><img src="assets/images/linkedin.png"></a>        
+    </div> 
+  </header>
     <div class="container">
 <h3>Courses</h3>
 <p>
@@ -315,7 +322,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<a href="https://www.facebook.com/topup.u.1/"><i class="fa fa-facebook"></i></a>
 	<a href="https://www.instagram.com/topupucontact/"><i class="fa fa-instagram"></i></a>
 	<a href="https://www.linkedin.com/in/topup-u-online-learning-platform-375aba20a/"><i class="fa fa-linkedin"></i></a>
-	<a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg/featured"><i class="fa fa-youtube-play"></i></a>        
+	<a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg?sub_confirmation=1"><i class="fa fa-youtube-play"></i></a>        
 </div>  
 
 			<div class="clear"></div>
