--- a/contact.html
+++ b/contact.html
@@ -127,13 +127,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									
 									<h5>Phone</h5>
 									<p>+09 123 1234 123</p>
-									<div class="social text-center">
+<!-- 									<div class="social text-center">
 										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="https://www.facebook.com/topup.u.1/"><i class="fa fa-facebook"></i></a>
 										<a href="https://www.instagram.com/topupucontact/"><i class="fa fa-instagram"></i></a>
 										<a href="https://www.linkedin.com/in/topup-u-online-learning-platform-375aba20a/"><i class="fa fa-linkedin"></i></a>
 										<a href="https://www.youtube.com/channel/UCy8r5LZDqUMHSV2WXGxuOcg/featured"><i class="fa fa-youtube-play"></i></a>        
-									</div>
+									</div> -->
 								</div>
 								
 							</div> 
